# Corpus-Foundry

./: Cargo.toml  README.md  pyproject.toml
python/dataforge/: hf_executor.py  pipeline.py
tests/: test_hf_exec.py  test_non_hf_ds.py  test_pipeline.py
