[build-system]
requires = ["maturin>=1.13,<2.0", "datasets>=4.8.0"]
build-backend = "maturin"

[project]
name = "dataforge"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
python-source = "python"
module-name = "dataforge._accelerated"
